# Interactive-RPG-Simulating-University-Life

./: Action.cpp  Action.h  CMakeCache.txt  CMakeLists.txt  Character.cpp  Character.h  Combat.cpp  Combat.h  Enemy.cpp  Enemy.h  GameLogic.cpp  GameLogic.h  ImGuiExample.cpp  Inventory.cpp  Inventorytest.cpp  Item.cpp  Item.h  Itemtest.cpp  Makefile  Player.cpp  Player.h  Playertest.cpp  README.md  Stats.cpp  Stats.h  UseImGui.cpp  a.out  cmake_install.cmake  display.cpp  display.h  inventory.cpp  inventory.h  item.cpp  item.h  main.cpp  scene.cpp  scene.h  stats.cpp  stats.h  test  (+2 more)
VS2022attempt/: CMakeLists.txt  main.cpp  vcpkg.json
VS2022attempt/VS2022attempt/: CMakeLists.txt  ImGuiExample.cpp  UseImGui.cpp  UseImGui.h
test/: Combattest.cpp  GameLogictest.cpp  Inventorytest.cpp  Itemtest.cpp  Playertest.cpp  Statstest.cpp
testfolder/: runAllTests
